turned object to iframe

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body class="nomar">
 		<div class="row nomar">
-			<object class="col-sm-3 nomar" frameBorder="0" height="600px" id="nav" data="html/nav.html"></object>
+			<iframe class="col-sm-3 nomar" frameBorder="0" height="600px" id="nav" src="html/nav.html"></iframe>
 			<object class="col-sm-9 nomar" frameBorder="0" height="600px" id="content"></object>
 		</div>		
 		<p id="test"></p>
