--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/main.css">
 		<script src="plugins/jquery.js"></script>
-		<script src="nav.js"></script>
+		<script src="js/nav.js"></script>
 	</head>
 	<body class="nomar">
 		<div class="row nomar">
