--- a/html/nav.html
+++ b/html/nav.html
@@ -2,5 +2,5 @@
 <script src="../plugins/jquery.js"></script>
 <nav class="nomar">
 	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="https://www.wikipedia.org/">item1</p></div>
-	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="hallo">item2</p></div>
+	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="https://coornhert-gymnasium.nl/">item2</p></div>
 </nav>
