--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 	<body class="nomar">
 		<div class="row nomar">
-			<iframe class="col-sm-3 nomar" frameBorder="0" height="100%" id="nav" src="html/nav.html"></iframe>
-			<iframe class="col-sm-9 nomar" frameBorder="0" height="100%" id="content" src="https://coornhert-gymnasium.nl"></iframe>
+			<iframe class="col-sm-3 nomar" frameBorder="0" id="nav" class="window" src="html/nav.html"></iframe>
+			<iframe class="col-sm-9 nomar" frameBorder="0" id="content" class="window" src="https://coornhert-gymnasium.nl"></iframe>
 		</div>		
 		<p id="test"></p>
 	</body>
