--- a/html/nav.html
+++ b/html/nav.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="../css/main.css">
 <script src="../plugins/jquery.js"></script>
 <nav class="nomar">
-	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="https://www.wikipedia.org/">item1</p></div>
-	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="https://coornhert-gymnasium.nl/">item2</p></div>
+	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="WatIsHet.html">Over Asterix en Obelix</p></div>
+	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="geschiedenis.html">Geschiedenis</p></div>
+	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="namen.html">Personages</p></div>
 </nav>
