--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body class="nomar">
 		<div class="row nomar">
 			<iframe class="col-sm-3 nomar window" frameBorder="0" id="nav" src="html/nav.html"></iframe>
-			<iframe class="col-sm-9 nomar window" frameBorder="0" id="content" src="https://coornhert-gymnasium.nl"></iframe>
+			<iframe class="col-sm-9 nomar window" frameBorder="0" id="content" src="html/WatIsHet.html"></iframe>
 		</div>		
 		<p id="test"></p>
 	</body>
