--- a/html/nav.html
+++ b/html/nav.html
@@ -2,6 +2,6 @@
 <script src="../plugins/jquery.js"></script>
 <nav class="nomar">
 	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="html/WatIsHet.html">Over Asterix en Obelix</p></div>
-	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="html/geschiedenis.html">Geschiedenis</p></div>
-	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="html/namen.html">Personages</p></div>
+	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="html/Geschiedenis.html">Geschiedenis</p></div>
+	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="html/Namen.html">Personages</p></div>
 </nav>
