--- a/html/Geschiedenis.html
+++ b/html/Geschiedenis.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
-		<div>
+		<div class="tb">
 			<p>
 			Goscinny en Uderzo hadden voordat ze met Asterix waren begonnen al een strip gemaakt genaamd Oumpah-pah in een tijdschrift van Kuifje. Het eerste deel, Asterix de Gallier, was eerst een serie in het tijdschrift Pilote, waar het eerste deel op 29 oktober 1959 verscheen. Twee jaar later verscheen het eerste stripboek, genaamd Asterix de Gallier. Vanaf toen verschenen er nieuwe stripboeken ongeveer ieder jaar. Hun succes was enorm:
 			</p>
