--- a/html/Namen.html
+++ b/html/Namen.html
@@ -3,31 +3,33 @@
 	<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
-		Woordgrappen:
-		<ul>
-			<li>Idéfix: Idée fixe, "een waanidee waar je je niet kunt ontdoen" (bron: <a href="https://www.vandale.nl/gratis-woordenboek/nederlands/betekenis/idee-fixe#.WxPyoEiFOUk">vandale.nl</a>)</li>
-			<li>Kakofonix (Frans: Assurancetourix): Kakofonie, "Klanken die onaangenaam aandoem" (bron: <a href="http://www.dbnl.org/tekst/bork001lett01_01/bork001lett01_01_0012.php#k005">dbnl.org</a>)</li>
-			<li>Petaf (Frans: Autograf): Petje af, "ergens respect voor hebben" (bron: <a href="http://www.woorden.org/spreekwoord.php?woord=petje%20af">woorden.org</a>)</li>
-			<li>Hoefnix (Frans: Cetautomatix): Ik hoef niks, en hoef, van hoefijzer</li>
-			<li>Notax (Frans: Jolitorax): No tax, "Geen belasting"</li>
-			<li>Nognix (Frans: Keskonrix): Nog niks</li>
-			<li>Ozewiezewozewiezewallakristallix (Frans: Ocatarinetabellatchitchix): Van het kinderliedje "ozewiezewoze wieze walla kristalla". Er wordt hierover een grap gemaakt door Kakofonix: "Vreemd... de naam van die man inspireert me. Ik zal een lied componeren..." (Bron: Asterix op Corsica, pagina 11B, plaatje 1)
-			<li>Kostunrix (Frans: Ordralfabétix): Het kost een rix (een rix was een rijksdaalder, 2,50 gulden waard)</li>
-			<li>Visstix (Frans: Périférix): Vissticks, "langwerpig blokje gepaneerde vis" (Bron: <a href="https://www.vandale.nl/gratis-woordenboek/nederlands/betekenis/visstick#.WxVO6UiFOUk">vandale.nl</a>)</li>
-		</ul>
-		<p>Alle namen hebben een woordgrap, en de meest belangrijke staan hierboven. Ook zijn er bepaalde regels voor de namen, zoals dat alle mannelijke Galliers hun naam op -ix hebben eindigen en alle vrouwen -a. Alle Romeinse mannennamen eindigen op -us. Germaanse namen daarentegen eindigen allemaal op -ic, Griekse op -es of -os en Britse op -ax.
-		</p>
-		<p>
-		Ook hebben alle nationaliteiten steriotypes. Een paar ervan staan hieronder:
-		</p>
-		<ul>
-			<li>Germanen: Gediciplineerd en militairen. Ze bestaan uit veel volken die elkaar constant op de vuist zitten.</li>
-			<li>Zwitserlanders: Neutraal, eten kaasfondue en zijn geobsedeerd door opruimen, op tijd zijn en banken.</li>
-			<li>Britten: Nemen iedere dag om precies 5 uur een kopje warm water met melk, tot Asterix ze thee leert kennen in Asterix en de Britten, ze drinken lauw bier of koude rode wijn, en hun huizen zijn identiek.</li>
-			<li>Corsicanen: Trots maar lui. Ze staan bekend om hun siesta.</li>
-			<li>Grieken: Vinden alle andere volken barbaren. Ze raden altijd het bedrijf van hun neef aan.</li>
-			<li>Noormannen: drinken veel bier. Hun land staat erom bekend dat het er 6 maanden lang nacht is, en ze proberen uit te vinden wat angst is, omdat ze dat niet kennen en geloven dat ze daarmee kunnen vliegen.</li>
-			<li>Belgen: Spreken met een heel typisch belgisch accent, waarbij ze vooral de woorden "efkens", "Gij" en "Awel".</li>
-		</ul>
+		<div class="tb">
+			Woordgrappen:
+			<ul>
+				<li>Idéfix: Idée fixe, "een waanidee waar je je niet kunt ontdoen" (bron: <a href="https://www.vandale.nl/gratis-woordenboek/nederlands/betekenis/idee-fixe#.WxPyoEiFOUk">vandale.nl</a>)</li>
+				<li>Kakofonix (Frans: Assurancetourix): Kakofonie, "Klanken die onaangenaam aandoem" (bron: <a href="http://www.dbnl.org/tekst/bork001lett01_01/bork001lett01_01_0012.php#k005">dbnl.org</a>)</li>
+				<li>Petaf (Frans: Autograf): Petje af, "ergens respect voor hebben" (bron: <a href="http://www.woorden.org/spreekwoord.php?woord=petje%20af">woorden.org</a>)</li>
+				<li>Hoefnix (Frans: Cetautomatix): Ik hoef niks, en hoef, van hoefijzer</li>
+				<li>Notax (Frans: Jolitorax): No tax, "Geen belasting"</li>
+				<li>Nognix (Frans: Keskonrix): Nog niks</li>
+				<li>Ozewiezewozewiezewallakristallix (Frans: Ocatarinetabellatchitchix): Van het kinderliedje "ozewiezewoze wieze walla kristalla". Er wordt hierover een grap gemaakt door Kakofonix: "Vreemd... de naam van die man inspireert me. Ik zal een lied componeren..." (Bron: Asterix op Corsica, pagina 11B, plaatje 1)
+				<li>Kostunrix (Frans: Ordralfabétix): Het kost een rix (een rix was een rijksdaalder, 2,50 gulden waard)</li>
+				<li>Visstix (Frans: Périférix): Vissticks, "langwerpig blokje gepaneerde vis" (Bron: <a href="https://www.vandale.nl/gratis-woordenboek/nederlands/betekenis/visstick#.WxVO6UiFOUk">vandale.nl</a>)</li>
+			</ul>
+			<p>Alle namen hebben een woordgrap, en de meest belangrijke staan hierboven. Ook zijn er bepaalde regels voor de namen, zoals dat alle mannelijke Galliers hun naam op -ix hebben eindigen en alle vrouwen -a. Alle Romeinse mannennamen eindigen op -us. Germaanse namen daarentegen eindigen allemaal op -ic, Griekse op -es of -os en Britse op -ax.
+			</p>
+			<p>
+			Ook hebben alle nationaliteiten steriotypes. Een paar ervan staan hieronder:
+			</p>
+			<ul>
+				<li>Germanen: Gediciplineerd en militairen. Ze bestaan uit veel volken die elkaar constant op de vuist zitten.</li>
+				<li>Zwitserlanders: Neutraal, eten kaasfondue en zijn geobsedeerd door opruimen, op tijd zijn en banken.</li>
+				<li>Britten: Nemen iedere dag om precies 5 uur een kopje warm water met melk, tot Asterix ze thee leert kennen in Asterix en de Britten, ze drinken lauw bier of koude rode wijn, en hun huizen zijn identiek.</li>
+				<li>Corsicanen: Trots maar lui. Ze staan bekend om hun siesta.</li>
+				<li>Grieken: Vinden alle andere volken barbaren. Ze raden altijd het bedrijf van hun neef aan.</li>
+				<li>Noormannen: drinken veel bier. Hun land staat erom bekend dat het er 6 maanden lang nacht is, en ze proberen uit te vinden wat angst is, omdat ze dat niet kennen en geloven dat ze daarmee kunnen vliegen.</li>
+				<li>Belgen: Spreken met een heel typisch belgisch accent, waarbij ze vooral de woorden "efkens", "Gij" en "Awel".</li>
+			</ul>
+		</div>
 	</body>
 </html>
