--- a/html/WatIsHet.html
+++ b/html/WatIsHet.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
-		<div>
+		<div class="tb">
 			<p>
 			Asterix en Obelix is een Franse serie stripboeken, geschreven door René Goscinny en getekend door Albert Uderzo.
 			</p>
