--- a/html/Namen.html
+++ b/html/Namen.html
@@ -4,6 +4,22 @@
 	</head>
 	<body>
 		<div class="tb">
+			De belangrijkste personages:
+			<ul>
+				<li>Heroïx (Frans: Abraracourcix) is de leider van het Gallische dorp</li>
+				<li>Bellefleur (Frans: Bonemine) is de vrouw van Heroïx</li>
+				<li>Nestorix (Frans: Agécanonix) is de oudste bewoner van het dorp en, ook al heeft hij een kruk, kan hij erg snel rennen en heeft overal commentaar op. Hij heeft een veel jongere vrouw (Naam onbekend).</li>
+				<li>Kakofonix (Frans: Assurancetourix) is de bard van het dorp, maar zijn muziek wordt niet erg gewaardeerd. Hij woont in een boomhut en de smid, Hoefnix, heeft de ergste hekel aan hem.</li>
+				<li>Asterix (Frans: Astérix) is de hoofdpersoon, hij is klein en moet het vooral van zijn hersens hebben. Hij drinkt (net als de rest van het dorp) de toverdrank van Panoramix om erg sterk te worden, maar ook zonder drank kan hij veel.</li>
+				<li>Hoefnix (Frans: Cetautomatix) is de smid van het dorp. Van iedereen in het dorp heeft hij de grootste hekel aan Kakofonix en hij maakt graag ruzie met Kostunrix over de kwaliteit van zijn vis.</li>
+				<li>Idéfix (Frans: Idéfix) is het hondje van Obelix. In tegenstelling tot Obelix is hij echter zeer klein.</li>
+				<li>Forentientje (Frans: Lelosubmarine) is de man van Kostunrix.</li>
+				<li>Julius Caesar (Frans: Jules César) is de Romeinse keizer en de grote tegenstander van Asterix.</li>
+				<li>Nognix (Frans: Keskonrix) is het jongetje dat ziet dat Kakofonix ontvoerd wordt. (Asterix en de Gladiatoren, bladzijde 4, plaatje 1)</li>
+				<li>Obelix (Frans: Obélix) is de grote vriend van Asterix, is altijd sterk en is dol op everzwijnen. Hij denkt altijd dat hij minder groot is dan dat hij is.</li>
+				<li>Kostunrix (Frans: Ordalfabétix) verkoopt rotte vis in het dorp.</li>
+				<li>Panoramix (Frans: Panoramix) is de druïde van het dorp die de toverdrank maakt waardoor de Galliërs onoverwinnelijk worden.</li>
+			</ul>
 			Woordgrappen:
 			<ul>
 				<li>Idéfix: Idée fixe, "een waanidee waar je je niet kunt ontdoen" (bron: <a href="https://www.vandale.nl/gratis-woordenboek/nederlands/betekenis/idee-fixe#.WxPyoEiFOUk">vandale.nl</a>)</li>
