--- a/html/nav.html
+++ b/html/nav.html
@@ -4,4 +4,5 @@
 	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="html/WatIsHet.html">Over Asterix en Obelix</p></div>
 	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="html/Geschiedenis.html">Geschiedenis</p></div>
 	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="html/Namen.html">Personages</p></div>
+	<div class="row nomar"><p class="col-sm-12 col-xs-12 navitem" data-link="html/images.html">Grappen</p></div>
 </nav>
