--- a/html/images.html
+++ b/html/images.html
@@ -3,7 +3,7 @@
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
-		<div class="tb">
+		<div class="tb img">
 			<img src="../img/1.png" />
 			<img src="../img/2.png" />
 			<img src="../img/3.png" />
