--- a/html/WatIsHet.html
+++ b/html/WatIsHet.html
@@ -7,15 +7,23 @@
 			<p>
 			Asterix en Obelix is een Franse serie stripboeken, geschreven door René Goscinny en getekend door Albert Uderzo.
 			</p>
+			<img src="../img/5.jpg" />
+			<p class="bs">René Goscinny en Albert Uderzo</p>
 			<p>
 			Het verhaal gaat over een dorpje in Gallië, het enige dorpje in heel Gallië dat nog niet bezet is door de romeinen. De reden dat de romeinen niet geslaagd zijn om het dorp te veroveren, is omdat de druïde van het dorp het recept voor een toverdrank heeft, waardoor je heel sterk wordt. Daarom hebben de romeinen vier legerkampen eromheen gezet: Petitbonum, Laudanum, Babaorum en Aquarium. 
 			</p>
+			<img src="../img/6.jpg" />
+			<p class="bs">Het dorpje omringt door de vier romeinse legerkampen</p>
 			<p>
 			Het recept van de toverdrank is onbekend, maar in Asterix de Gallier wordt gezegt door Panoramix, de druïde: “De herkomst van deze drank ligt in een ver en vaag verleden… Het recept wordt van druïde op druïde overgeleverd… Het enige dat ik je kan vertellen is, dat er maretak en zeekreeft in gaat. De kreeft is eigenlijk niet nodig, maar die geeft wat smaak aan het drankje.” We weten ook dat de maretak met een gouden snoeimes geoogst moet worden. In andere delen wordt bekend dat de drank ook verse vis en aardolie bevat.
 			</p>
+			<img src="../img/7.png" />
+			<p class="bs">Panoramix met de toverdrank</p>
 			<p>
 			Door het succes van de serie is het in meer dan 100 talen vertaald en zijn er 13 films over gemaakt: negen animaties en vier opgenomen. Verder is de eerste Franse satelliet ernaar vernoemd en is er een attractiepark over gebouwd, genaamd Parc Astérix. 
 			</p>
+			<img src="../img/8.jpg" />
+			<p class="bs">Parc Astérix</p>
 		</div>
 	</body>
 </html>
