--- a/html/Geschiedenis.html
+++ b/html/Geschiedenis.html
@@ -7,6 +7,8 @@
 			<p>
 			Goscinny en Uderzo hadden voordat ze met Asterix waren begonnen al een strip gemaakt genaamd Oumpah-pah in een tijdschrift van Kuifje. Het eerste deel, Asterix de Gallier, was eerst een serie in het tijdschrift Pilote, waar het eerste deel op 29 oktober 1959 verscheen. Twee jaar later verscheen het eerste stripboek, genaamd Asterix de Gallier. Vanaf toen verschenen er nieuwe stripboeken ongeveer ieder jaar. Hun succes was enorm:
 			</p>
+			<img src="../img/10.png" />
+			<p class="bs">Astérix le Gaulois</p>
 			<ul>
 				<li>(1959) Asterix de Gallier: 6.000 verkocht</li>
 				<li>(1960) Asterix en het Gouden Snoeimes: 20.000 verkocht</li>
@@ -22,6 +24,8 @@
 			<p>
 			Daana brak er een nieuw asterix-tijdperk aan, met Jean-Yves Ferri (die het verhaal schrijft) en Frédéric Mébarki als tekenaar. Voordat het eerste album uitkwam, zei Mébarki dat hij ermee stopte, en daarom is Didier Conrad de uiteindelijke tekenaar geworden, en samen hebben ze tot nu toe 3 boeken gemaakt.
 			</p>
+			<img src="../img/11.jpg" />
+			<p class="bs">Jean-Yves Ferri en Didier Conrad</p>
 		</div>
 	</body>
 </html>
