--- a/html/Namen.html
+++ b/html/Namen.html
@@ -20,6 +20,7 @@
 				<li>Kostunrix (Frans: Ordalfabétix) verkoopt rotte vis in het dorp.</li>
 				<li>Panoramix (Frans: Panoramix) is de druïde van het dorp die de toverdrank maakt waardoor de Galliërs onoverwinnelijk worden.</li>
 			</ul>
+			<img src="../img/9.png" />
 			Woordgrappen:
 			<ul>
 				<li>Idéfix: Idée fixe, "een waanidee waar je je niet kunt ontdoen" (bron: <a href="https://www.vandale.nl/gratis-woordenboek/nederlands/betekenis/idee-fixe#.WxPyoEiFOUk">vandale.nl</a>)</li>
