--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<link rel="stylesheet" href="css/main.css">
 		<script src="plugins/jquery.js"></script>
 		<script src="js/nav.js"></script>
+		<title>Asterix & Co.</title>
+		<link rel="icon" href="img/icon.ico">
 	</head>
 	<body class="nomar">
 		<div class="row nomar">
